Fix vertical alignment of aside

--- a/www/styles/styles.scss
+++ b/www/styles/styles.scss
@@ -763,6 +763,7 @@ a:visited {
 
 /*** ASIDE ***/
 aside {
+  margin-top: $verticalMarginBetweenElms;
 
   &>nav {
     background-color: $textColor;
